--- a/Bio-OS/res/values/strings.xml
+++ b/Bio-OS/res/values/strings.xml
@@ -4,12 +4,14 @@
     <!-- General -->
     <string name="app_name">Bio-OS</string>
     <string name="action_about">About</string>
-    
+
     <!-- Main Activity -->
     <string name="DefaultValue">0</string>
     <string name="HeartRateLabel">Heart Rate:</string>
     <string name="HeartRateUnit">bpm</string>
-    
+
     <!-- About Activity -->
+    <string name="title_activity_about">About</string>
+    <string name="StatusLabel">Status:</string>
 
 </resources>
