Displays the data from the other sensors.

--- a/Bio-OS/res/values/strings.xml
+++ b/Bio-OS/res/values/strings.xml
@@ -9,6 +9,10 @@
     <string name="DefaultValue">0</string>
     <string name="HeartRateLabel">Heart Rate:</string>
     <string name="HeartRateUnit">bpm</string>
+    <string name="TemperatureLabel">Temperature:</string>
+    <string name="TemperatureUnit">ºC</string>
+    <string name="BreathingRateLabel">Breathing Rate:</string>
+    <string name="BreathingRateUnit"></string>
 
     <!-- About Activity -->
     <string name="title_activity_about">About</string>
